--- a/style.less
+++ b/style.less
@@ -2562,8 +2562,12 @@ body .main .ufld_icon_links {
 .widget_core_org_members {
 
     svg {
-       z-index: 3;
-      
+       z-index: 5;
+       
+       circle {
+           fill: rgba(0, 0, 0, 0.1);
+       }
+       
     }
     
     .col-lg-4:hover {
