--- a/style.less
+++ b/style.less
@@ -3507,3 +3507,22 @@ div.action_messages, div.log_container {
         margin-bottom: 40px;
     }
 }
+
+// v1.1. FIXES -> @MILOS
+.extended_search_form .submit {
+	font-size: 18px !important;
+	margin-top: 0em !important;
+	margin-left: 10px !important;
+}
+
+#bCalendarToday {
+	border: 1px solid #448aff !important;
+	background-color: #448aff !important;
+	color: #fff;
+	border-radius: 2px !important;
+}
+
+.featured_post {
+	border-bottom: none;
+	margin-bottom: 0em;
+}
